# alfred-amzn-link

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: main.rs
workflow/: info.plist
